--- a/css/style.css
+++ b/css/style.css
@@ -19,29 +19,35 @@ header{
     font-size: large;
 }
 
-main{
+main, form, #pokemonContainer{
     display: flex;
     flex-flow: wrap;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 input{
-    width: 80%;
+    width: 30%;
     padding:0px 0 ;
     border-radius: 10px;
     text-align: center;
     font-size: x-large;
     background-color: transparent;
+    box-shadow: rgba(0, 0, 0, 0.628) 0 0 10px;
+    margin-right: 20px;
 }
 
 button{
     text-transform: capitalize;
     border-radius: 10px;
+    border: none;
     padding: 10px;
-    background-color: rgb(30, 96, 210);
+    background-color: rgb(64, 121, 218);
     color: aliceblue;
+    box-shadow: rgba(0, 0, 0, 0.628) 0 0 10px;
 }
+
 
 .pokemon-card{
     display: flex;
@@ -54,4 +60,7 @@ button{
     border: 1px solid;
     border-radius: 10px;
     padding: 20px 30px;
+
+    width: 80%;
+    box-shadow: rgba(0, 0, 0, 0.628) 0 0 10px;
 }
